--- a/style.css
+++ b/style.css
@@ -1,105 +1,60 @@
 body {
 	font-family: helvetica, arial, sans-serif;
+	background-image: url(./images/space-at-night.jpg);
 }
 
 h1 {
-	color: #3a241d;
+	color: #f8f5f5;
 	text-align: center;
+	height:10%;
+	top:0%;
 }
 
 #left-container {
 	left: 0px;
+	top: 0px;
 }
 
 #right-container {
 	right: 0px;
+	top: 0px;
 }
 
 .container {
-	background-color: #eee;
 	width: 15%;
 	top: 0px;
 	position: absolute;
-	height: 100%;
-	padding: 10px;
+	height: 110%;
+
 }
 
-.plant-holder {
+.face-holder {
 	position: relative;
-	height: 13%;
+	height: 18%;
 	left: -10px;
 }
 
-.plant {
+.face {
 	position: absolute;
-	max-width: 150%;
-	max-height: 150%;
+	max-width: 120%;
+	max-height: 120%;
 	z-index: 2;
 }
 
-/*https://codepen.io/Rotarepmi/pen/rjpNZY*/
-
-.jar-walls {
-	height: 80%;
-	width: 60%;
-	background: #d1e1df;
-	border-radius: 1rem;
+.cats-container {
+	height: 100%;
+	width: 70%;
 	position: absolute;
-	bottom: 0.5%;
-	left: 20%;
-	opacity: 0.5;
+	left: 15%;
+	top:10%;
 	z-index: 1;
 }
 
-.jar-top {
-	width: 50%;
-	height: 5%;
-	background: #d1e1df;
+.cats {
+	background: #eee;
 	position: absolute;
-	bottom: 80.5%;
-	left: 25%;
-	opacity: 0.7;
-	z-index: 1;
+	max-width: 100%;
+	max-height: 100%;
+	z-index: 2;
 }
 
-.jar-bottom {
-	width: 50%;
-	height: 1%;
-	background: #d1e1df;
-	position: absolute;
-	bottom: 0%;
-	left: 25%;
-	opacity: 0.7;
-}
-
-.dirt {
-	width: 60%;
-	height: 5%;
-	background: #3a241d;
-	position: absolute;
-	border-radius: 0 0 1rem 1rem;
-	bottom: 1%;
-	left: 20%;
-	opacity: 0.7;
-	z-index: -1;
-}
-
-.jar-glossy-long {
-	width: 3%;
-	height: 20%;
-	border-radius: 2rem;
-	background: #ddfbff;
-	position: absolute;
-	bottom: 20%;
-	left: 5%;
-}
-
-.jar-glossy-short {
-	width: 3%;
-	height: 5%;
-	border-radius: 2rem;
-	background: #ddfbff;
-	position: absolute;
-	bottom: 45%;
-	left: 5%;
-}
