--- a/style.css
+++ b/style.css
@@ -31,15 +31,17 @@ h1 {
 .face-holder {
 	position: relative;
 	height: 18%;
-	left: -10px;
+	left: 0px;
 }
 
 .face {
 	position: absolute;
-	max-width: 120%;
-	max-height: 120%;
+	max-width: 100%;
+	max-height: 100%;
 	z-index: 2;
+	border-radius: 50%;
 }
+
 
 .cats-container {
 	height: 100%;
@@ -56,5 +58,6 @@ h1 {
 	max-width: 100%;
 	max-height: 100%;
 	z-index: 2;
+	border-radius: 2%;
 }
 
