--- a/style.css
+++ b/style.css
@@ -25,19 +25,22 @@ h1 {
 	top: 0px;
 	position: absolute;
 	height: 110%;
-
 }
 
 .face-holder {
 	position: relative;
-	height: 18%;
+	height: 15%;
 	left: 0px;
 }
 
 .face {
-	position: absolute;
-	max-width: 100%;
-	max-height: 100%;
+	display: block;
+	margin: 0 auto;
+	max-width: 100%;*/
+	/*height: auto;*/
+    position: absolute;
+	width: 6em;
+	height: 6em;
 	z-index: 2;
 	border-radius: 50%;
 }
